# base-server

./: .env  .gitignore  Cargo.toml  README.md
config/: default.toml
crates/base-server/: Cargo.toml
crates/base-server/src/: lib.rs  start.rs
crates/base-server/src/layer/: auth.rs  database.rs  log.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: jwt.rs
crates/common/src/error/: auth.rs  config.rs  db.rs
crates/config/: Cargo.toml
crates/config/src/: app.rs  database.rs  jwt.rs  lib.rs  log.rs  uri.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: lib.rs
crates/middleware/src/extract/: auth.rs  config.rs  db.rs
crates/middleware/src/middleware/: auth.rs  log.rs
crates/trace-log/: Cargo.toml
crates/trace-log/src/: lib.rs
logs/: app.log.2026-02-03  app.log.2026-02-04
web-server/: Cargo.toml
web-server/src/: main.rs  router.rs
