[package]
name = "base-server"
version = "0.0.0"
edition = "2024"

[dependencies]
axum.workspace = true
tracing.workspace = true
tokio.workspace = true
server-config.workspace = true
server-database.workspace = true
trace-log.workspace = true
server-common.workspace = true
server-middleware.workspace = true
