[package]
name = "base-server"
version = "0.0.5"
edition = "2024"
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/CloudThinkSpace/base-server/tree/main/crates/base-server"
rust-version = "1.91.1"
description = "This is a web server framework with base server support."

[features]
default = []
log = ["dep:trace-log"]
auth = []

[dependencies]
axum.workspace = true
tracing.workspace = true
tokio.workspace = true
server-config.workspace = true
server-database.workspace = true
trace-log = { workspace = true , optional = true }
server-common.workspace = true
server-middleware.workspace = true
