[package]
name = "server-database"
version = "0.0.2"
edition = "2024"
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/CloudThinkSpace/base-server/tree/main/crates/database"
rust-version = "1.91.1"
description = "This is a web server framework with database support."

[dependencies]
sqlx={workspace=true,features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
server-config.workspace = true
anyhow.workspace = true
