[package]
name = "server-middleware"
version = "0.0.3"
edition = "2024"
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/CloudThinkSpace/base-server/tree/main/crates/middleware"
rust-version = "1.91.1"
description = "This is a web server framework with middleware support."

[dependencies]
axum.workspace = true
sqlx={workspace=true,features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
serde.workspace = true
server-common.workspace = true
server-config.workspace = true
tracing.workspace = true
