[package]
name = "trace-log"
version = "0.0.0"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["time","local-time","env-filter"]}
tracing-appender.workspace = true
time = {workspace = true, features = ["formatting","parsing","macros","std", "local-offset"]}
log.workspace = true
