[package]
name = "trace-log"
version = "0.0.1"
edition = "2024"
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/CloudThinkSpace/base-server"
rust-version = "1.91.1"
description = "This is a web server framework with tracing and logging capabilities."

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["time","local-time","env-filter"]}
tracing-appender.workspace = true
time = {workspace = true, features = ["formatting","parsing","macros","std", "local-offset"]}
log.workspace = true
